fixed spacing on ticks and crosses

--- a/_sass/_sponsor.scss
+++ b/_sass/_sponsor.scss
@@ -420,6 +420,7 @@ $dark-purple: #220021;
                     font-weight: 900;
                     display: inline-block;
                     margin-right: 1.5ex;
+                    width: 1em;
                     content: '\f00c';
                 }
 
